--- a/style/style.css
+++ b/style/style.css
@@ -193,10 +193,123 @@ a.categories__box__main {
   width: 180px;
   height: 43px;
   border-bottom: 1px solid #dd895a;
+  margin-bottom: 20px;
 }
 .lastReviews__wrap h1 {
   font-size: 16px;
   font-weight: 600;
 }
 
+.lastReviews__box {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  transition: 0.2s;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.lastReviews__box:hover {
+  box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.09);
+  border-radius: 5px;
+}
+.lastRevBox__preview {
+  position: relative;
+  width: 25.6%;
+}
+.lastRevBox__preview::before {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #f4d5c4;
+  z-index: -1;
+  max-height: 140px;
+}
+.lastRevBox__preview img {
+  width: 95%;
+  margin: 0 0 0 auto;
+}
+.lastRevBox__description {
+  width: 70.3%;
+}
+.lastRev__description__title {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.lastRev__description__title h1 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #dd895a;
+}
+.lastRev__description__title h2 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.lastRev__description__title p {
+  font-size: 14px;
+  color: var(--secondColor);
+}
+.lastRev__description__autor {
+  display: flex;
+  align-items: center;
+  margin-bottom: 14px;
+}
+.lastRev__description__autor p {
+  font-size: 16px;
+  font-weight: 500;
+}
+.lastRev__description__autor img {
+  width: 45px;
+  height: 45px;
+  margin-right: 14px;
+}
+.lastRev__description__text {
+  display: flex;
+  flex-direction: column;
+}
+.lastRev__description__text h3 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 14px;
+}
+.lastRev__description__text p {
+  font-size: 14px;
+  color: var(--secondColor);
+  margin-bottom: 14px;
+}
+.lastRev__description__text__results {
+  display: flex;
+}
+.description__text__box {
+  display: flex;
+  margin-right: 30px;
+}
+.description__text__box img {
+  width: 17px;
+  height: 17px;
+  margin-right: 10px;
+}
+.description__text__box p {
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--secondColor);
+}
+.lastRev__description__moreBTN {
+  display: flex;
+}
+.lastRev__description__moreBTN img {
+  width: 17px;
+  height: 17px;
+  margin-right: 10px;
+}
+.lastRev__description__moreBTN a {
+  text-decoration: underline;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--secondColor);
+}
 /*//Main//*/
