--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,7 @@ header .wrap {
   height: 100%;
   width: 100%;
 }
-span.WreiteReviews {
+a.WreiteReviews {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -72,10 +72,10 @@ span.WreiteReviews {
   cursor: pointer;
   user-select: none;
 }
-span.WreiteReviews p {
+a.WreiteReviews p {
   color: #fff;
 }
-span.WreiteReviews img {
+a.WreiteReviews img {
   width: 20px;
   height: 20px;
 }
@@ -83,11 +83,13 @@ span.WreiteReviews img {
 
 /*Categories*/
 .categories {
-  width: 17.5%;
+  position: fixed;
+  width: 14.5%;
   background: #ffffff;
   border: 1px solid #e1e1e1;
   box-sizing: border-box;
   padding: 25px;
+  z-index: 10;
 }
 .categories__box {
   margin-top: 24px;
@@ -148,7 +150,10 @@ a.categories__box__main {
 
 /*Main*/
 .mainScrean {
+  display: block;
   width: 80%;
+  margin: 0 0 0 auto;
+  z-index: 5;
 }
 .about {
   width: 60.3%;
@@ -312,4 +317,256 @@ a.categories__box__main {
   font-weight: 500;
   color: var(--secondColor);
 }
+.lastReviews__bunner {
+  width: 100%;
+  height: 150px;
+  margin: 10px 0;
+}
+.lastReviews__bunner a {
+  width: 100%;
+  height: 100%;
+}
+.lastReviews__bunner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /*//Main//*/
+
+/*Pagination*/
+
+#pagination {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0 50px 0;
+}
+#pagination a,
+#pagination i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  color: var(--secondColor);
+  font-size: 18px;
+  padding: 3px 0 2px 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  box-sizing: border-box;
+}
+#pagination span {
+  display: flex;
+}
+#pagination a {
+  border: 1px solid #b8c1c6;
+  cursor: pointer;
+  background-color: #fff;
+  margin: 0 5px;
+}
+#pagination i {
+  margin: 0 3px 0 3px;
+}
+#pagination a.current {
+  border: 1px solid #dd895a;
+  background: #dd895a;
+  color: #fff;
+}
+/*//Pagination//*/
+
+/*allCategories/*/
+a.backMainPage {
+  font-size: 14px;
+  color: var(--secondColor);
+}
+.allCategories h1 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+.allCategories__left,
+.allCategories__right {
+  width: 49%;
+}
+.allCategories__wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.allCategories__wrap a {
+  position: relative;
+}
+.allCategories__wrap .allCategories__box a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background: var(--secondColor);
+  transition: 0.2s;
+}
+.allCategories__wrap .allCategories__box a:hover:before {
+  width: 100%;
+}
+.allCategories__box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+a.mainCategories {
+  padding: 10px;
+  box-sizing: border-box;
+  color: #fff;
+  background: #dd895a;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+a.mainCategories::before {
+  display: none;
+}
+.allCategories__subbox {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+a.subboxHref {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 12px;
+  color: #000;
+}
+a.subboxHref::before {
+  display: none;
+}
+.allCategories__sub2box {
+  display: flex;
+  flex-wrap: wrap;
+}
+.allCategories__sub2box a {
+  color: var(--secondColor);
+  font-size: 14px;
+  margin: 0 10px 10px 0;
+}
+/*//allCategories//*/
+
+/*Current*/
+section.current {
+  width: 100%;
+}
+.current__previews {
+  display: flex;
+  justify-content: space-between;
+}
+.current__previews__img {
+  width: 42%;
+}
+.current__previews__img img {
+  width: 90%;
+}
+.current__previews__text__autor {
+  margin-right: 30px;
+}
+.current__previews__text__autor img {
+  width: 100px;
+  height: 100px;
+}
+.current__previews__text {
+  display: flex;
+  width: 52.6%;
+}
+.current__previews__text__data {
+  display: flex;
+  flex-direction: column;
+}
+.current__previews__text__data p {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.current__previews__text__data span {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--secondColor);
+  margin-bottom: 20px;
+}
+.current__previews__text__data h1 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #33383a;
+}
+hr.currentLine {
+  border: 1px solid #e1e1e1;
+}
+.current__review {
+  display: flex;
+  flex-direction: column;
+  width: 55%;
+}
+.current__review h1 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.current__review p {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--secondColor);
+}
+.current__review img {
+  width: 100%;
+  margin: 40px 0;
+}
+.current__review__result {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.current__review__result__box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.currentResBox__title {
+  display: flex;
+  margin-bottom: 12px;
+}
+.currentResBox__title img {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  margin-right: 10px;
+}
+.current__comments {
+  width: 55%;
+}
+h1.cummentstopTitle {
+  font-size: 16px;
+  font-weight: 600;
+  position: relative;
+  width: fit-content;
+  margin-bottom: 35px;
+}
+h1.cummentstopTitle::before {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #dd895a;
+}
+.current__comments_box .current__previews__text {
+  width: 100%;
+}
+p.commentText {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--secondColor);
+}
+hr.commentHR {
+  border: 1px solid #e1e1e1;
+  width: 100%;
+}
+/*//Current//*/
